--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.servlet.context-path=/oficina
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/oficina
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.flyway.baseline-on-migrate=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
