Mudança na estrutura do banco e nas migrations criação/edição dos models

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.servlet.context-path=/oficina
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/oficina
+spring.datasource.url=jdbc:postgresql://localhost:5432/trabalhoAvaliativo
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
