--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.servlet.context-path=/oficina
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/trabalhoAvaliativo
+spring.datasource.url=jdbc:postgresql://localhost:5432/oficina
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.flyway.baseline-on-migrate=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+api.security.token.secret=$(JWT_SECRET:my-secret-key)
